--- a/templates/index.html
+++ b/templates/index.html
@@ -201,7 +201,7 @@
                                     </div>
                                     <div class="tip-content">
                                         <h4>Start Chatting</h4>
-                                        <p>Type your message in the input box below and click Send. Try the Prompt Improvement feature! <i class="fa-solid fa-wand-magic-sparkles"></i></p>
+                                        <p>Type your message below and click Send. Try the Prompt Improvement feature! <i class="fa-solid fa-wand-magic-sparkles"></i></p>
                                     </div>
                                 </div>
 
